[package]
name = "pseudonym"
version = "0.1.0"
edition = "2018"
authors = [ "José Duarte <duarte.gmj@gmail.com>" ]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Declare aliases with ease!"
keywords = ["alias", "aliases", "macro"]
categories = ["development-tools"]
homepage = "https://github.com/jmg-duarte/pseudonym"
repository = "https://github.com/jmg-duarte/pseudonym"
autotests = false

[[test]]
name = "tests"
path = "tests/macro_tests.rs"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = {version = "1", features = ["parsing", "extra-traits", "full"]}
proc-macro2 = "1"

[dev-dependencies]
trybuild = { version = "1", features = ["diff"]}