[package]
name = "pseudonym"
version = "0.2.2"
edition = "2018"
authors = [ "José Duarte <duarte.gmj@gmail.com>" ]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Declare aliases with ease!"
keywords = ["alias", "aliases", "macro"]
categories = ["development-tools"]
homepage = "https://github.com/jmg-duarte/pseudonym"
repository = "https://github.com/jmg-duarte/pseudonym"
autotests = false

[[test]]
name = "tests"
path = "tests/macro_tests.rs"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.28"
syn = {version = "2.0.18", features = ["parsing", "extra-traits", "full"]}
proc-macro2 = "1.0.60"

[dev-dependencies]
trybuild = { version = "1.0.80", features = ["diff"]}
